# PANDA

./: .gitignore  CMakeLists.txt  LICENSE  PANDA.cc  PANDAEX_Analyze.py  PANDAEX_FitRMSE.py  PANDAEX_McNulty_Compare.py  PANDAEX_McNulty_Proton.py  PANDAEX_Recombination.py  PANDA_Analyze.py  PANDA_GUI.py  README.md  compare_creme_panda.py  run.mac  run_particle_validation_sequence.sh
Assets/: PANDA_GUI_BACKUP.py
Documentation/: PANDA_MASTER_DESIGN  PANDA_VALIDATION_SUMMARY.md
Macros/: 7-18-26.json  run_Au197_srim_check.mac  run_C12_biased.mac  run_Cl35_srim_check.mac  run_F19_srim_check.mac  run_He3_unbiased.mac  run_I127_srim_check.mac  run_Ni58_srim_check.mac  run_alpha_biased.mac  run_alpha_unbiased.mac  run_ceiling_T1000_auto.mac  run_ceiling_T1000_wide.mac  run_ceiling_T100_auto.mac  run_ceiling_T100_wide.mac  run_ceiling_T200_auto.mac  run_ceiling_T200_wide.mac  run_ceiling_T500_auto.mac  run_ceiling_T500_wide.mac  run_ceiling_T50_auto.mac  run_ceiling_T50_wide.mac  run_ceiling_XY1000_auto.mac  run_ceiling_XY1000_wide.mac  run_ceiling_XY100_auto.mac  run_ceiling_XY100_wide.mac  run_ceiling_XY200_auto.mac  run_ceiling_XY200_wide.mac  run_ceiling_XY500_auto.mac  run_ceiling_XY500_wide.mac  run_ceiling_XY50_auto.mac  run_ceiling_XY50_wide.mac  run_deuteron_unbiased.mac  run_hitachi_15MeV.mac  run_hitachi_22MeV.mac  run_hitachi_30MeV.mac  run_hitachi_40MeV.mac  run_hitachi_50MeV.mac  run_hitachi_63MeV.mac  run_hitachi_80MeV.mac  run_hitachi_XY2T1_15MeV.mac  run_hitachi_XY2T1_22MeV.mac  (+17 more)
Presets/: detector_1um.json  neutrondetector.json
include/: EventAction.hh  (+6 more)
(+15 files in other folders)
